# Devisions_Pay_Fastapi

./: Makefile  README.md  pyproject.toml
app/: config.py  database.py
tests/: conftest.py
